--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "car-warehouse",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./backend/server.js",
   "scripts": {
     "start": "cd backend && nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
